# praxis-v2

./: .env.example  .gitignore  AUDIT_FINDINGS.md  AUDIT_LOG.md  CLAUDE.md  FOLLOWUPS.md  MIGRATION.md  OBSERVABILITY_LOG.md  OVERNIGHT.md  PLAN.md  README.md  pyproject.toml  pyrightconfig.json
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_market_cap_cache.py  0003_drop_depends_on.py  0004_investigation_priority.py  0005_fundamentals_cache.py  0006_surfaced_ideas.py
docs/: audit-prompt.md  observability-prompt.md  s3-audit-2026-04-20.md
handlers/: __init__.py  _common.py  _dive_base.py  _plan_parser.py  analyze_filing.py  answer_question.py  cleanup_sessions.py  compile_research_node.py  compile_to_wiki.py  dive_business.py  dive_business_moat.py  dive_capital_allocation.py  dive_custom.py  dive_financial_rigorous.py  dive_financials.py  dive_geopolitical_risk.py  dive_industry_structure.py  dive_macro.py  dive_moat.py  gather_sources.py  generate_daily_journal.py  lint_vault.py  notify.py  orchestrate_dive.py  orchestrate_research.py  rate_limit_probe.py  refresh_backlinks.py  refresh_index.py  screen_candidate_companies.py  surface_ideas.py  synthesize_crosscut_memo.py  synthesize_memo.py  ticker_index.py  triage_filing.py
handlers/prompts/: _global_rules.py  _prefix.py  compile_to_wiki.py  dive_business_moat.py  dive_custom.py  (+10 more)
infra/: Procfile  bootstrap.sh  deploy.sh  render_mcp_config.sh
observer/: .mcp.json  CLAUDE.md
praxis_core/: config.py  logging.py  time_et.py
scratch/: 4-20-overnight.md  codex-4-20-review.md  open-ended-research-implementation-spec.md
scripts/: preflight.sh  smoke.sh
tests/: conftest.py
vault_seed/: .mcp-config.json  .mcp-config.json.template  .mcp.json.template  CLAUDE.md  INDEX.md  LOG.md
(+140 files in other folders)
