[project]
name = "praxis-v2"
version = "0.1.0"
description = "AI-managed investment research system: signal surfacing + deep research + reliability"
requires-python = ">=3.13"
readme = "README.md"

dependencies = [
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-frontmatter>=1.1.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "click>=8.1.7",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.4",
    "anthropic>=0.39.0",
    "mcp>=1.1.0",
    "feedparser>=6.0.11",
    "watchdog>=6.0.0",
    "yfinance>=0.2.50",
    "tomli>=2.0.2",
    "tomli-w>=1.0.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "boto3>=1.34",
    "pyyaml>=6.0",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-postgresql>=6.1.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.7.0",
    "pyright>=1.1.385",
    "moto>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["praxis_core", "handlers", "services"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N"]
ignore = [
  "E501",  # line length handled by formatter
  "N818",  # exception naming — we use WorkerCancelled etc, not WorkerCancelledError
]

[tool.pyright]
pythonVersion = "3.13"
strict = ["praxis_core", "handlers", "services"]
reportMissingImports = "error"
